Fix : 회원조회 뒤로가기 버튼 주소 수정, 히카리 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.profiles.include=aws
 
 mybatis.config-location=classpath:repository-config.xml
 mybatis.mapper-locations=classpath:repositories/**/*.xml
+
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.pool-name=OracleHikariCP
