Feat : 세션에 로그인 한사람 정보저장

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=OracleHikariCP
+
+server.servlet.session.cookie.name=MYSESSIONID
