Refactor : Thymeleaf Layout 적용

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,11 @@ spring.datasource.hikari.max-lifetime=600000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.pool-name=OracleHikariCP
 
+spring.thymeleaf.enabled=true
+spring.thymeleaf.cache=false
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 server.servlet.session.cookie.name=MYSESSIONID
+
