--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+		
+		<!-- Thymeleaf 레이아웃 -->
+		<dependency>
+		    <groupId>nz.net.ultraq.thymeleaf</groupId>
+		    <artifactId>thymeleaf-layout-dialect</artifactId>
+		</dependency>
+		
 		<!-- Spring Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
