--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,11 @@
 	        <groupId>nz.net.ultraq.thymeleaf</groupId>
 	        <artifactId>thymeleaf-layout-dialect</artifactId>
 	    </dependency>
-		   
+		
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-oauth2-client</artifactId>
+	    </dependency>   
 	
 	</dependencies>
 
