--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 server.servlet.session.cookie.name=MYSESSIONID
-
+logging.level.org.springframework.security=DEBUG
+logging.level.com.ezen.bookstore=DEBUG
