--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,22 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
+	<!-- 아임포트 -->
+	<repositories>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<!-- Thymeleaf를 사용한 템플릿 엔진 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-		
+
 		<!-- Thymeleaf 레이아웃 -->
 		<dependency>
 		    <groupId>nz.net.ultraq.thymeleaf</groupId>
@@ -124,21 +133,35 @@
 	        <artifactId>spring-boot-starter-mail</artifactId>
 	    </dependency>
 	
-		<dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-thymeleaf</artifactId>
-	    </dependency>
-	    
-	    <dependency>
-	        <groupId>nz.net.ultraq.thymeleaf</groupId>
-	        <artifactId>thymeleaf-layout-dialect</artifactId>
-	    </dependency>
+<!--		<dependency>-->
+<!--	        <groupId>org.springframework.boot</groupId>-->
+<!--	        <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+<!--	    </dependency>-->
+<!--	    -->
+<!--	    <dependency>-->
+<!--	        <groupId>nz.net.ultraq.thymeleaf</groupId>-->
+<!--	        <artifactId>thymeleaf-layout-dialect</artifactId>-->
+<!--	    </dependency>-->
 		
 		<dependency>
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-oauth2-client</artifactId>
 	    </dependency>
-	
+
+		<!-- 아임포트 -->
+		<dependency>
+			<groupId>com.github.iamport</groupId>
+			<artifactId>iamport-rest-client-java</artifactId>
+			<version>0.2.23</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.retrofit2</groupId>
+			<artifactId>retrofit</artifactId>
+			<version>2.11.0</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
