Feat: controller 경로 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.hikari.pool-name=OracleHikariCP
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
 spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/templates
 spring.thymeleaf.suffix=.html
 
 spring.servlet.multipart.max-file-size=10MB
